httproute-app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-app
spec:
  parentRefs:
    - name: api-gateway
      namespace: default
  hostnames:
    - argoapp.praveens.online
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name:  myapp-service
          namespace: default
          port: 80
